# skill_box

./: .gitignore  README.md  pyproject.toml  setup.py  sub.json
src/skill_box/: __init__.py  __main__.py  cli.py
